fix subprocess killing